--- a/index.html
+++ b/index.html
@@ -8,16 +8,39 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
+    <title>Your Preferred Weather Dashboard</title>
 </head>
 
 <body>
     
-    <header>
-        <h1 id="h1">Weather Dashboard</h1>
-    </header>
+    <div class="jumbotron">
+        <h1>This Is Your Weather Dashboard</h1>
+    </div>
+
+    <div class="container1">
+
+        <div class="col-md-4 c1">
+            <!-- Left Side:
+            Search box and area to append searched terms buttons -->
+
+            <h4>Search for a City:</h4>
+            <form id="city-form">
+                <input type="text" id="city-input" />
+                <button type="button" id="add-city" class="btn btn-primary">
+                    <i class="fas fa-search"></i>
+                </button>
+            </form>
+
+            <!-- Buttons will get dumped here: -->
+            <div id="buttons-view" class="card" style="width: 18rem;">
+                <ul class="list-group list-group-flush"></ul>
+            </div>
+        </div>
 
 
 
+
+    </div>
 
 
 
